--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+/* You can add global styles to this file, and also import other style files */
+$primary-color: #081c48;
+$hover-color: #c9c417;
+
+* {
+  font-family: 'Questrial', sans-serif;
+}
+
+html,body{
+  padding: 20px 7px 7px 7px;
+  background: $primary-color;
+  color: white;
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+a:hover{
+  color: $hover-color;
+}
+
+.loader{
+  img{
+    width: 50px;
+  }
+  width: 100%;
+  display: flex;
+  height: 100%;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
