changed avatar logic, added action for chatbot

--- a/src/app/components/avatar/avatar.component.html
+++ b/src/app/components/avatar/avatar.component.html
@@ -1,3 +1,5 @@
 <div class="content">
-  <div id="img-div" class="img-div"></div>
+  <div id="img-div" class="img-div">
+    <img *ngIf="loading" src="assets/images/loading-gif.gif" alt="">
+  </div>
 </div>
