--- a/src/app/components/avatar/avatar.component.scss
+++ b/src/app/components/avatar/avatar.component.scss
@@ -1,4 +1,10 @@
 .content{
+  .img-div{
+    img{
+      width: 50px;
+    }
+    z-index: 0;
+  }
   display: flex;
   align-items: center;
   justify-content: center;
