--- a/src/app/pages/avatar-speech/avatar-speech.component.scss
+++ b/src/app/pages/avatar-speech/avatar-speech.component.scss
@@ -1,4 +1,8 @@
 .content{
+  .lastAnswer{
+    text-align: left;
+    padding: 0 50px 0 50px;
+  }
   hr{
     height: 5px;
     width: 100%;
@@ -10,11 +14,18 @@
     padding: 20px;
   }
   .mic{
+    img{
+      width: 50px;
+    }
     .micResponse{
       padding: 0 20px 0 20px;
     }
     small{
       margin: 0 0 15px 0;
+      text-align: center;
+    }
+    .info{
+      margin-top: 10px;
     }
     .fa-microphone-slash{
       color: red;
