--- a/src/app/pages/chat-bot/chat-bot.component.scss
+++ b/src/app/pages/chat-bot/chat-bot.component.scss
@@ -88,7 +88,7 @@
       margin-top: 10px;
     }
     padding: 20px;
-    height: 300px;
+    height: calc(100vh - 450px);
     overflow: overlay;
     width: 100%;
   }
