changed actions design in chat page

--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -9,5 +9,5 @@
       </a>
     </div>
   </div>
-  <p>© Copyright 2023 Meta Trade World | Developed By <a href="https://iamumut.com">Umut Can Arda</a> </p>
+  <p>© Copyright 2023 Meta Trade World</p>
 </div>
