--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -6,7 +6,7 @@
     <a routerLink="/home">Home</a>
     <a routerLink="/chat-bot">Chat Bot</a>
     <a routerLink="/avatar-speech">Avatar</a>
-    <a target="_blank" href="https://iamumut.com/">Developer</a>
+    <!-- <a target="_blank" href="https://iamumut.com/">Developer</a> -->
   </div>
   <div class="mobileMenu">
     <nav role="navigation">
@@ -21,7 +21,7 @@
           <a (click)="closeMobileMenu()" routerLink="/home"><li>Home</li></a>
           <a (click)="closeMobileMenu()" routerLink="/chat-bot"><li>Chat Bot</li></a>
           <a (click)="closeMobileMenu()" routerLink="/avatar-speech"><li>Avatar</li></a>
-          <a (click)="closeMobileMenu()" target="_blank" href="https://iamumut.com/"><li>Developer</li></a>
+          <!-- <a (click)="closeMobileMenu()" target="_blank" href="https://iamumut.com/"><li>Developer</li></a> -->
         </ul>
       </div>
     </nav>
