--- a/src/app/pages/chat-bot/chat-bot.component.scss
+++ b/src/app/pages/chat-bot/chat-bot.component.scss
@@ -1,21 +1,22 @@
+.actions{
+  .actionDetail{
+    padding: 10px 10px 10px 15px;
+    background: #1e59bf;
+    border-radius: 100px;
+    width: 100%;
+    margin: 10px 10px 0 0;
+    cursor: pointer;
+  }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+}
 .content{
   .messages{
     .ai{
-      .actions{
-        .actionDetail{
-          padding: 5px 10px 5px 10px;
-          background: #1e59bf;
-          border-radius: 100px;
-          margin: 10px 10px 0 0;
-          cursor: pointer;
-        }
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-      }
       .aiMessage{
         .image{
           small{
@@ -93,6 +94,22 @@
     width: 100%;
   }
   .textArea{
+    .buttons{
+      @media screen and (max-width: 528px) {
+        flex-direction: column!important;
+        button{
+          width: 100%!important;
+          align-self: start!important;
+        }
+        width: 85%!important;
+      }
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+    }
     textarea{
       margin-top: 20px;
       width: 95%;
@@ -110,6 +127,8 @@
       margin: 0 20px 20px 0;
       font-size: 10px;
       align-self: end;
+      padding: 5px 15px 0 15px;
+      text-align: center;
     }
     display: flex;
     flex-direction: column;
